KNL-163 last 2 instances in DbcontentService
git-svn-id: https://source.sakaiproject.org/svn/kernel/trunk@69825 66ffb92e-73f9-0310-93c1-f5514f145a0a